--- a/public/viewer.html
+++ b/public/viewer.html
@@ -349,8 +349,6 @@ function applyFilters() { filterLogic = 'and'; updateTimelineByFilter(); }
 function applyFiltersOr() { filterLogic = 'or'; updateTimelineByFilter(); }
 
 /* -------- 获取事件并渲染（关键替换区） -------- */
-
-
 window.addEventListener('style:ready', () => {
   fetch(ENDPOINT)
     .then(res => res.json())
@@ -374,10 +372,14 @@ window.addEventListener('style:ready', () => {
         const Status          = event.Status          ?? event.status          ?? pick('状态');
         const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? pick('主机类型');
 
+        // ✅ 新增：Tag（支持数组/逗号分隔/为空）
         const TagRaw = event.Tag ?? event.tag ?? pick('标签');
         const Tag = Array.isArray(TagRaw)
           ? TagRaw
-          : String(TagRaw || '').split(',').map(s => s.trim()).filter(Boolean);
+          : String(TagRaw || '')
+              .split(',')
+              .map(s => s.trim())
+              .filter(Boolean);
 
         const tooltipHtml = blob
           ? blob.replace(/\n/g, '<br>')
@@ -397,12 +399,13 @@ window.addEventListener('style:ready', () => {
           content: contentText,
           start: Start,
           end: End || undefined,
-          title: tooltipHtml,
-          EventType, Region, Platform, Company, Status, ConsolePlatform, Tag
+          title: tooltipHtml, // vis 会用这个作为 tooltip
+          EventType, Region, Platform, Company, Status, ConsolePlatform,
+          Tag // ← 提供给 template 打 data-Tag
         };
       });
 
-      // 初始化 Timeline
+      // ✅ 初始化 Timeline，加入 template 钩子
       timeline = new vis.Timeline(
         document.getElementById("timeline"),
         originalItems,
@@ -415,60 +418,31 @@ window.addEventListener('style:ready', () => {
           verticalScroll: true,
           zoomKey: "ctrlKey",
           stack: true,
+
+          // ⭐ 关键：每条事件渲染时，为容器加 data-* 与类名，并返回内容 DOM
           template: (item, element) => {
-            const host = element?.closest?.('.vis-item') || element;
-            if (host && window.__styleEngine) {
-              window.__styleEngine.attachEventDataAttrs(host, item);
-              host.classList.add('event');
+            if (element && window.__styleEngine) {
+              window.__styleEngine.attachEventDataAttrs(element, item); // data-EventType / data-Tag 等
+              element.classList.add('event'); // 统一锚点：.vis-item.event
             }
             const root = document.createElement('div');
             const h4 = document.createElement('h4');
             h4.className = 'event-title';
             h4.textContent = item.content || '(无标题)';
             root.appendChild(h4);
-            return root;
+            return root; // 也可以 return 字符串 HTML
           }
         }
       );
 
-      // 初始化后应用一次已保存样式
-      try {
-        const saved = localStorage.getItem('timelineStyle.v1');
-        if (saved) {
-          const state = JSON.parse(saved);
-          window.__styleEngine?.applyStyleState(state, {
-            selectorBase: '.vis-item.event, .vis-item-content.event',
-            titleSelector: '.event-title'
-          });
-        }
-      } catch (e) {
-        console.warn('[style] load saved style failed:', e);
-      }
-
-      // 绑定“确定/保存并应用”
-      const confirmBtn = document.querySelector('#style-confirm, #style-confirm-btn, #style-save');
-      if (confirmBtn && !confirmBtn.dataset.bound) {
-        confirmBtn.addEventListener('click', () => {
-          applyCurrentStyles({ persist: true });
-          // 关闭面板
-          if (typeof closeStyleWindow === 'function') closeStyleWindow();
-          else document.getElementById('style-window')?.style && (document.getElementById('style-window').style.display = 'none');
-        });
-        confirmBtn.dataset.bound = '1';
-      }
-
-      // （可选）绑定“重置”
-      const resetBtn = document.querySelector('#style-reset, #style-reset-btn');
-      if (resetBtn && !resetBtn.dataset.bound) {
-        resetBtn.addEventListener('click', () => {
-          setTimeout(() => applyCurrentStyles({ persist: true }), 0);
-        });
-        resetBtn.dataset.bound = '1';
-      }
+      // ✅ 初始化后立即应用当前样式（没有配置也不会报错）
+      const state = window.__styleState?.getStyleState?.() || { version:1, boundTypes:{}, rules:{} };
+      window.__styleEngine?.applyStyleState(state, {
+        selectorBase: '.vis-item.event',
+        titleSelector: '.event-title'
+      });
     });
-}); // ← 这里只闭合一次
-
-// ← 正确关闭 then(data => { ... })
+});// ← 正确关闭 then(data => { ... })
 
 /* -------- 获取下拉选项 -------- */
 fetch(ENDPOINT + '?action=options')
@@ -796,17 +770,10 @@ function openStyleWindow(attr) {
 // 点击“重置”：清空该属性的绑定与行
 // 关闭/保存：现在变成“保存并应用 + 关闭面板”
 function confirmStyle() {
-  // 1) 生成全量样式状态 → 注入 CSS → 保存到 localStorage
   applyCurrentStyles({ persist: true });
-
-  // 2) 关闭面板（用你已有的关闭函数即可）
-  if (typeof closeStyleWindow === 'function') {
-    closeStyleWindow();
-  } else {
-    const root = document.getElementById('style-window');
-    if (root) root.style.display = 'none';
-  }
+  document.getElementById('style-window').style.display = 'none';
 }
+
 // 重置绑定：清空后立刻应用（相当于撤销该属性的所有样式）
 function onResetBind() {
   const tbody    = document.getElementById('styleTableBody');
@@ -842,7 +809,6 @@ function onResetBind() {
 
   // ⬇️ 立刻应用（并保存）
   applyCurrentStyles({ persist: true });
-
 }
 
 
