--- a/public/viewer.html
+++ b/public/viewer.html
@@ -124,7 +124,7 @@
       <option value="fontColor">字体颜色</option>
       <option value="borderColor">事件框颜色</option>
       <option value="backgroundColor">事件框填充色</option>
-      <option value="lineColor">连接线颜色</option>
+      <option value="haloColor">光晕颜色</option>
     </select>
   </label>
 
@@ -198,7 +198,7 @@ const PRESET_COLORS = [
   fontColor: '字体颜色',
   borderColor: '事件框颜色',
   backgroundColor: '事件框填充色',
-  lineColor: '连接线颜色',
+  haloColor: '光晕颜色',
   none: '无'
 };
 function styleLabel(key) {
@@ -572,7 +572,7 @@ function renderRuleRow(attrKey, rule) {
     rule.type === 'fontColor' ||
     rule.type === 'borderColor' ||
     rule.type === 'backgroundColor' ||
-    rule.type === 'lineColor'
+    rule.type === 'haloColor'
   ) {
     const color = tdContent.querySelector('input[type="color"]');
     const hex   = tdContent.querySelector('input[type="text"]');
@@ -1175,7 +1175,10 @@ function buildStyleControl(type) {
   }
 
   // ====== 颜色类：fontColor / borderColor / backgroundColor / lineColor ======
-  if (type === 'fontColor' || type === 'borderColor' || type === 'backgroundColor' || type === 'lineColor') {
+  if (type === 'fontColor' || type === 'borderColor' || type === 'backgroundColor' || type === 'haloColor') {
+  // …原有颜色 UI（取色器/HEX/色块）保持不变…
+  // 注意：你已经修过“色块点击要 dispatchEvent”那两行，照用就行
+} {
     wrap.className = 'color-ui';
 
     // 1) 原生取色器
@@ -1289,14 +1292,13 @@ function confirmStyle() {
 
 // === A. 把面板当前内存 → 引擎需要的 state 结构 ===
 function buildStyleStateFromUI() {
-  // UI 类型 -> 引擎键
   const toEngineKey = (t) => ({
     font: 'fontFamily',
     fontFamily: 'fontFamily',
     fontColor: 'textColor',
     backgroundColor: 'bgColor',
     borderColor: 'borderColor',
-    lineColor: 'lineColor',   // ✅ 独立出来
+    haloColor: 'haloColor',   // ✅ 只保留 haloColor
     none: 'none'
   }[t] || t);
 
@@ -1306,7 +1308,7 @@ function buildStyleStateFromUI() {
     boundTypes[attr] = toEngineKey(t || 'none');
   }
 
-  // 2) 具体规则：attr -> value -> { textColor/bgColor/borderColor/lineColor/fontFamily }
+  // 2) 规则映射
   const rules = {};
   for (const [attr, rows] of Object.entries(styleRules)) {
     if (!rows || rows.length === 0) continue;
@@ -1326,7 +1328,7 @@ function buildStyleStateFromUI() {
         if (k === 'textColor'   && st.fontColor)       slot.textColor   = st.fontColor;
         if (k === 'bgColor'     && st.backgroundColor) slot.bgColor     = st.backgroundColor;
         if (k === 'borderColor' && st.borderColor)     slot.borderColor = st.borderColor;
-        if (k === 'lineColor'   && st.lineColor)       slot.lineColor   = st.lineColor;   // ✅ 独立存储
+        if (k === 'haloColor'   && st.haloColor)       slot.haloColor   = st.haloColor; // ✅
         if (k === 'fontFamily'  && st.fontFamily)      slot.fontFamily  = st.fontFamily;
       });
     }
