--- a/public/viewer.html
+++ b/public/viewer.html
@@ -181,16 +181,15 @@ const attributeLabels = {
 window.attributeLabels = attributeLabels;
 /*样式参数*/
 const PRESET_COLORS = [
-  { name: '红', hex: '#FF0000' },
-  { name: '橙', hex: '#FF7F00' },
-  { name: '黄', hex: '#FFFF00' },
-  { name: '绿', hex: '#00FF00' },
-  { name: '青', hex: '#00FFFF' },
-  { name: '蓝', hex: '#0000FF' },
-  { name: '紫', hex: '#8B00FF' },
-  { name: '黑', hex: '#000000' },
-  { name: '灰', hex: '#808080' },
-  { name: '白', hex: '#FFFFFF' }
+  { name: '琥珀',   hex: '#F59E0B' },
+  { name: '靛蓝',   hex: '#6366F1' },
+  { name: '祖母绿', hex: '#10B981' },
+  { name: '玫红',   hex: '#F43F5E' },
+  { name: '天青',   hex: '#0EA5E9' },
+  { name: '紫罗兰', hex: '#8B5CF6' },
+  { name: '青柠',   hex: '#84CC16' },
+  { name: '橙',     hex: '#F97316' },
+  { name: '洋红',   hex: '#D946EF' }
 ];
 
   const STYLE_LABELS = {
